--- a/Registration.html
+++ b/Registration.html
@@ -31,8 +31,20 @@
         <summary class="Humburger-link">
   <img width="32" src="img/Sandwich.svg" alt="Sandwich icon" class="Sandwich-icon" id="Hlink">
 </summary>
-<div class="menu" id="Hmenu">
+<div class="menu" id="Hmenu"> 
+  <div class="top-menu-links">
+    <a href="Registration.html" class="login-link">
+  <img src="img/Login_tl.svg" alt="Logo-icon" class="Login-icon li-tml">
+</a>
+<a href="Cart.html" class="Cart-link">
+  <div class="Cart">
+  <img width="32" src="img/Cart_tl.svg" alt="" class="Cart-icon">
+  <span class="Cart-items">5</span>
+  </div>
+</a>
+  </div>
   <span class="close" id="close">&#10006;</span>
+
 <h3 class="menu-heading">MENU</h3>
 <div class="block-menu">
 <h3 class="menu-names">MAN</h3>
@@ -66,15 +78,16 @@
 </div>
 </div>
       </details>
-<a href="#" class="login-link">
+ <div class="right-menu-items d-flex">
+<a href="Registration.html" class="login-link">
   <img width="29" src="img/Login.svg" alt="Login icon" class="Login-icon">
-</a>
-<a href="#" class="Cart-link">
+<a href="Cart.html" class="Cart-link">
   <div class="Cart">
   <img width="32" src="img/Cart.svg" alt="" class="Cart-icon">
   <span class="Cart-items">5</span>
   </div>
 </a>
+      </div>
     </div>
  </div>
     
@@ -122,11 +135,6 @@
         </div>
 
 
-
-
-
-
-
   </div>
 </section>
 </main>
@@ -164,9 +172,7 @@
       </div>
     </div> 
     </footer> 
-
-
-    
+  
     <script src="js/script_2.js"></script>
 </body>
 </html>
