--- a/Product.html
+++ b/Product.html
@@ -33,6 +33,17 @@
 </summary>
 <div class="menu" id="Hmenu">
   <span class="close" id="close">&#10006;</span>
+   <div class="top-menu-links d-flex">
+    <a href="Registration.html" class="login-link">
+  <img src="img/Login_tl.svg" alt="Logo-icon" class="Login-icon li-tml">
+</a>
+<a href="Cart.html" class="Cart-link">
+  <div class="Cart">
+  <img width="32" src="img/Cart_tl.svg" alt="" class="Cart-icon">
+  <span class="Cart-items">5</span>
+  </div>
+</a>
+  </div>
 <h3 class="menu-heading">MENU</h3>
 <div class="block-menu">
 <h3 class="menu-names">MAN</h3>
@@ -66,15 +77,16 @@
 </div>
 </div>
       </details>
+ <div class="right-menu-items d-flex">
 <a href="Registration.html" class="login-link">
   <img width="29" src="img/Login.svg" alt="Login icon" class="Login-icon">
-</a>
 <a href="Cart.html" class="Cart-link">
   <div class="Cart">
   <img width="32" src="img/Cart.svg" alt="" class="Cart-icon">
   <span class="Cart-items">5</span>
   </div>
 </a>
+      </div>
     </div>
  </div>
     
